--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               </div>
             </div>
           </div>
-          <h1 class="landing__title">سبزلرن، اولین گام برنامه‌نویس شدن</h1>
+          <h1 class="landing__title"></h1>
           <h2 class="landing__subtitle">
             با آکادمی سبزلرن، برنامه نویسی رو با خیال راحت یاد بگیر و پیشرفت کن.
           </h2>
@@ -267,7 +267,7 @@
                 class="size-10 sm:size-16 lg:size-20 mb-2.5"
                 alt="student"
               />
-              <span class="landing-status__count">172842</span>
+              <span class="landing-status__count" id="users-counter" ></span>
               <span class="landing-status__text">دانشجو</span>
             </div>
 
@@ -277,7 +277,7 @@
                 class="size-10 sm:size-16 lg:size-20 mb-2.5"
                 alt="book"
               />
-              <span class="landing-status__count">77</span>
+              <span class="landing-status__count" id="courses-count"></span>
               <span class="landing-status__text">دوره آموزشی </span>
             </div>
 
@@ -287,7 +287,7 @@
                 class="size-10 sm:size-16 lg:size-20 mb-2.5"
                 alt="clock"
               />
-              <span class="landing-status__count">1598</span>
+              <span class="landing-status__count" id="minutes-counter"></span>
               <span class="landing-status__text">ساعت آموزش </span>
             </div>
           </div>
