--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login page</title>
+    <title>register page</title>
 
     <link rel="stylesheet" href="vendor/BootStrap/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/SwiperSlider/swiper.css">
@@ -39,18 +39,21 @@
                   <li class="top-bar__item">
                     <a href="#" class="top-bar__link">آموزش ری‌اکت</a>
                   </li>
+                  <li class="top-bar__item">
+                    <a href="#" class="top-bar__link">20,000 تومان</a>
+                  </li>
                 </ul>
               </div>
               <div class="top-bar__left">
                 <div class="top-bar__email">
                   <a href="#" class="top-bar__email-text top-bar__link">
-                    mohamadreza.mh1783@gmail.com
+                    sabzlearn@gmail.com
                   </a>
                   <i class="fas fa-envelope top-bar__email-icon"></i>
                 </div>
                 <div class="top-bar__phone">
-                  <a style="direction: ltr;" href="#" class="top-bar__phone-text top-bar__link">
-                    09108.....68
+                  <a href="#" class="top-bar__phone-text top-bar__link">
+                    09921558293
                   </a>
                   <i class="fas fa-phone top-bar__phone-icon"></i>
                 </div>
@@ -63,56 +66,11 @@
           <div class="container-fluid">
             <div class="main-header__content">
               <div class="main-header__right">
-                <svg
-                height="80"
-                width="80"
-                xmlns="http://www.w3.org/2000/svg"
-                class="absolute right-0 left-0 mx-auto md:static h-11 md:h-10 lg:h-14 shrink-0"
-                viewBox="0 0 1020 769"
-              >
-                <polygon
-                  fill="#006537"
-                  points="484.8124 560.0603 302.0609 655.3444 238.4124 617.2945 238.4124 462.4662 484.8124 560.0603"
-                />
-                <polygon
-                  fill="#006869"
-                  points="972.5712 207.8379 484.6647 462.7753 10.7595 275.1003 498.7369 20.1923 972.5712 207.8379"
-                />
-                <line
-                  fill="#1a3d3d"
-                  x1="929.7475"
-                  y1="307.461"
-                  x2="929.6513"
-                  y2="307.6423"
-                />
-                <polygon
-                  fill="#006869"
-                  points="1010.2748 576.281 951.4402 632.8758 896.4012 572.396 934.1612 536.0524 934.0697 227.9393 972.5606 207.8255 972.3776 534.6349 1010.2748 576.281"
-                />
-                <polygon
-                  fill="#00524c"
-                  points="972.5669 246.8789 972.5027 335.57 934.0989 357.7689 934.0747 266.9936 972.5669 246.8789"
-                />
-                <polygon
-                  fill="#004b26"
-                  points="478.5395 760.6504 238.4571 617.3325 238.4571 604.062 484.6701 560.0356 489.1606 570.333 478.5395 760.6504"
-                />
-                <polygon
-                  fill="#00524c"
-                  points="585.898 409.8693 484.472 463.0223 10.7549 275.1038 498.7374 20.1923 585.898 409.8693"
-                />
-                <polygon
-                  fill="#00322d"
-                  points="972.5669 207.8394 972.5027 255.9601 934.0989 300.7406 934.0747 227.9542 972.5669 207.8394"
-                />
-                <polygon
-                  fill="#1eb35b"
-                  points="816.6519 386.7124 816.6519 527.0091 478.1841 760.5632 302.0575 655.3487 816.6519 386.7124"
-                />
-              </svg>  
+                <img src="images/logo/Logo.png" class="main-header__logo" alt="لوگوی سبزلرن" />
+  
                 <ul class="main-header__menu">
                   <li class="main-header__item">
-                    <a href="./index.html" class="main-header__link">صفحه اصلی</a>
+                    <a href="#" class="main-header__link">صفحه اصلی</a>
                   </li>
   
                   <li class="main-header__item">
@@ -202,7 +160,7 @@
                   <i class="fas fa-shopping-cart main-header__cart-icon"></i>
                 </a>
                 <a href="#" class="main-header__profile">
-                  <span class="main-header__profile-text">محمدرضا محمدی</span>
+                  <span class="main-header__profile-text">محمدامین سعیدی راد</span>
                 </a>
               </div>
             </div>
@@ -213,39 +171,48 @@
 
     <section class="login-register">
         <div class="login">
-            <span class="login-title">ورود به حساب کاربری</span>
+            <span class="login-title">ایجاد حساب کاربری جدید</span>
             <span class="login-subtitle">
-                خوشحالیم دوباره میبینیمت دوست عزیز :)
+               به خونواده سبزلرن خوش اومدی
             </span>
 
             <div class="login__new-member">
                 <span class="login__new-member-text">
-                    کاربر جدید هستید؟
+                  آیا حساب کاربری دارید؟
                 </span>
-                <a href="./register.html" class="login__new-member-link">ثبت نام</a>
+                <a href="login.html" class="login__new-member-link">ورود</a>
             </div>
 
             <form action="#" class="login-form">
               <div class="login-form__username">
-                <input type="text" class="login-form__username-input" placeholder="نام کاربری یا آدرس ایمیل" />
+                <input type="text" class="login-form__username-input" placeholder="نام و نام خونوادگی" />
+                <i class="fa fa-user login-form__username-icon"></i>
+              </div>
+              <div class="login-form__username">
+                <input type="text" class="login-form__username-input" placeholder="نام کاربری" />
+                <i class="fa fa-user login-form__username-icon"></i>
+              </div>
+              <div class="login-form__username">
+                <input type="email" class="login-form__username-input" placeholder=" آدرس ایمیل" />
+                <i class="fa fa-user login-form__username-icon"></i>
+              </div>
+              <div class="login-form__username">
+                <input type="text" class="login-form__username-input" placeholder="شماره تماس" />
                 <i class="fa fa-user login-form__username-icon"></i>
               </div>
               <div class="login-form__password">
                 <input type="password" class="login-form__password-input" placeholder="رمز عبور" />
-                <i class="fa fa-lock login-form__password-icon"></i>
+                <i class="fa fa-lock-open login-form__password-icon"></i>
               </div>
               <button class="login-form__btn" type="submit">
-                <i class="fas fa-sign-in-alt login-form__btn-icon"></i>
-                <span class="login-form__btn-text">ورود</span>
+                <i class="fas fa-sign-out-alt login-form__btn-icon"></i>
+                <span class="login-form__btn-text">ثبت نام</span>
               </button>
 
               <div class="login-form__password-setting">
                 <label class="login-form__password-remember">
                   <input type="checkbox" class="login-form__password-checkbox" />
                   <span class="login-form__password-text">مرا به خاطر داشته باش</span>
-                </label>
-                <label class="login-form__password-forget">
-                  <a href="#" class="login-form__password-forget-link">رمز عبور را فراموش کرده اید؟</a>
                 </label>
               </div>
             </form>
