--- a/frontend/register.html
+++ b/frontend/register.html
@@ -380,6 +380,7 @@
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/Bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="./js/register.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="./js/register.js" type="module"></script>
 </body>
 </html>
