--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -22,24 +22,6 @@
           <div class="top-bar__content">
             <div class="top-bar__right">
               <ul class="top-bar__menu">
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش Html</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش Css</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش جاوا اسکریپت</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش بوت استرپ</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش پایتون</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش ری‌اکت</a>
-                </li>
               </ul>
             </div>
             <div class="top-bar__left">
@@ -203,7 +185,6 @@
                 <i class="fas fa-shopping-cart main-header__cart-icon"></i>
               </a>
               <a href="#" class="main-header__profile">
-                <span class="main-header__profile-text">محمدرضا محمدی</span>
               </a>
             </div>
           </div>
@@ -661,5 +642,6 @@
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/SwiperSlider/swiper.js"></script>
     <script src="vendor/Bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="./js/shared.js" type="module"></script>
 </body>
 </html>
