--- a/frontend/category.html
+++ b/frontend/category.html
@@ -20,24 +20,6 @@
             <div class="top-bar__content">
               <div class="top-bar__right">
                 <ul class="top-bar__menu">
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">آموزش Html</a>
-                  </li>
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">آموزش Css</a>
-                  </li>
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">آموزش جاوا اسکریپت</a>
-                  </li>
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">آموزش بوت استرپ</a>
-                  </li>
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">آموزش پایتون</a>
-                  </li>
-                  <li class="top-bar__item">
-                    <a href="#" class="top-bar__link">آموزش ری‌اکت</a>
-                  </li>
                 </ul>
               </div>
               <div class="top-bar__left">
@@ -201,7 +183,6 @@
                   <i class="fas fa-shopping-cart main-header__cart-icon"></i>
                 </a>
                 <a href="#" class="main-header__profile">
-                  <span class="main-header__profile-text">محمدرضا محمدی</span>
                 </a>
               </div>
             </div>
@@ -511,6 +492,8 @@
     <!-- Finish Footer -->
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
+    <script src="./js/shared.js" type="module"></script>
+
     
 </body>
 </html>
