--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,24 +19,6 @@
           <div class="top-bar__content">
             <div class="top-bar__right">
               <ul class="top-bar__menu">
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش Html</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش Css</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش جاوا اسکریپت</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش بوت استرپ</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش پایتون</a>
-                </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">آموزش ری‌اکت</a>
-                </li>
               </ul>
             </div>
             <div class="top-bar__left">
@@ -240,7 +222,7 @@
                     <i class="fas fa-shopping-cart main-header__cart-icon"></i>
                   </a>
                   <a href="./login.html" class="main-header__profile">
-                    <span class="main-header__profile-text">محمدرضا محمدی</span>
+                      <!-- elem from js-->
                   </a>
                 </div>
               </div>
@@ -1119,5 +1101,6 @@
     <script src="vendor/SwiperSlider/swiper-bundle.min.js"></script>
     <script src="js/slider.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/shared.js" type="module"></script>
   </body>
 </html>
